btl/build/log/idf_py_stdout_output_15208
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\esp\btl\build\bootloader\esp-idf\esptool_py && D:\esp\Espressif\python_env\idf5.0_py3.11_env\Scripts\python.exe D:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/esp/btl/build/bootloader/bootloader.bin"
Bootloader binary size 0x6760 bytes. 0x8a0 bytes (8%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/i2c_simple_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/i2c_simple_main.c.obj 
ccache D:\esp\Espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -ID:/esp/btl/build/config -ID:/esp/btl/main -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/newlib/platform_include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/freertos/FreeRTOS-Kernel/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/freertos/esp_additions/include/freertos -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/freertos/esp_additions/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_hw_support/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_hw_support/include/soc -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_hw_support/include/soc/esp32 -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_hw_support/port/esp32/. -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_hw_support/port/esp32/private_include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/heap/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/log/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/soc/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/soc/esp32/. -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/soc/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/hal/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/hal/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/hal/platform_port/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_rom/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_rom/include/esp32 -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_rom/esp32 -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_common/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_system/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_system/port/soc -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_system/port/include/private -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/xtensa/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/xtensa/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/include/apps -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/include/apps/sntp -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/lwip/src/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/port/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/port/esp32/include/arch -ID:/esp/btl/common/wificon -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_wifi/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_event/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_phy/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_phy/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_netif/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/nvs_flash/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_partition/include -ID:/esp/btl/common/mqtttcp -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/mqtt/esp-mqtt/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/tcp_transport/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp-tls -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp-tls/esp-tls-crypto -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/mbedtls/port/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/mbedtls/mbedtls/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/mbedtls/mbedtls/library -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/mbedtls/esp_crt_bundle/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/json/cJSON -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/driver/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/driver/deprecated -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/driver/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_pm/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.4/components/esp_ringbuf/include -ID:/esp/btl/common/output -ID:/esp/btl/common/i2c -ID:/esp/btl/common/uart -ID:/esp/btl/common/input -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/esp/btl=. -fmacro-prefix-map=D:/esp/Espressif/frameworks/esp-idf-v5.0.4=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.4-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/i2c_simple_main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\i2c_simple_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/i2c_simple_main.c.obj -c D:/esp/btl/main/i2c_simple_main.c
D:/esp/btl/main/i2c_simple_main.c: In function 'process_mess':
D:/esp/btl/main/i2c_simple_main.c:60:60: error: spurious trailing '%' in format [-Werror=format=]
   60 |         sprintf(cmd, "temperature: %.2f *C\nhumidity: %.2f \%", t2,h2);
      |                                                            ^~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
